Enable security manager in Servlet container tests